force-app/main/default/objects/Player__c/fields/BattingStyle__c.field-meta.xml
<CustomField>
    <fullName>BattingStyle__c</fullName>
    <label>Batting Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>right-hand-bat</fullName>
                <label>Right Hand Batter</label>
            </value>
            <value>
                <fullName>left-hand-bat</fullName>
                <label>Left Hand Batter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>