force-app/main/default/objects/Player__c/fields/BowlingStyle__c.field-meta.xml
<CustomField>
    <fullName>BowlingStyle__c</fullName>
    <label>Bowling Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>legbreak</fullName>
                <label>Leg-spin</label>
            </value>
            <value>
                <fullName>offbreak</fullName>
                <label>Off-Spin</label>
            </value>
            <value>
                <fullName>reverse</fullName>
                <label>Reverse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>