force-app/main/default/objects/Player__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>