force-app/main/default/objects/Player__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>FirstName__c  &amp; &apos; &apos; &amp; MiddleName__c &amp; &apos; &apos; &amp; LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>