force-app/main/default/objects/Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>DateOfBirth__c</columns>
    <columns>Gender__c</columns>
    <columns>Country__c</columns>
    <columns>BattingStyle__c</columns>
    <columns>BowlingStyle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>